--- a/Enapor.html
+++ b/Enapor.html
@@ -32,10 +32,10 @@
   
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>KNEC</title>
+        <title>Enapor-Portos de Cabo Verde</title>
         <link rel="shortcut icon" type="image/png" href="" />
         <meta name="og:url" content="" />
-        <meta property="og:description" content="KNEC Recruitment" />
+        <meta property="og:description" content="Recrutamento Enapor" />
         <meta property="og:image" content="" />
         <meta property="og:type" content="website" />
     <meta property="og:updated_time" content="1440432930" />
